Sun Dec  2 07:24:23 2012  Eric Hodel  <drbrain@segment7.net>

	* lib/rdoc/parser.rb:  Parse files with a -*- rdoc -*- modeline
	* test/rdoc/test_rdoc_parser.rb:  Test for above

Sun Dec  2 06:02:00 2012  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* gc.h (SET_MACHINE_STACK_END): add volatile for preventing
	  harmful optimization.  [ruby-dev:46665] [Bug #7468]

Sun Dec  2 05:01:58 2012  Koichi Sasada  <ko1@atdot.net>

	* iseq.c (rb_iseq_line_trace_each): iterate `line' event only.

	* test/ruby/test_iseq.rb: add a test for this change.

Sun Dec  2 02:46:04 2012  Koichi Sasada  <ko1@atdot.net>

	* vm_trace.c: add TracePoint#inspect.

	* test/ruby/test_settracefunc.rb: add a test for this change.

Sat Dec  1 21:18:19 2012  Koichi Sasada  <ko1@atdot.net>

	* test/ruby/test_backtrace.rb: add a test for
	  Thread::Backtrace::Location#inspect.
	  BTW, tests for `caller_locations' are not enough.
	  Any volunteers are welcome.

Sat Dec  1 21:06:58 2012  Koichi Sasada  <ko1@atdot.net>

	* vm_backtrace.c (location_inspect_m): add
	  Thread::Backtrace::Location#inspect.
	  It same as loc_obj.to_s.inspect.

Sat Dec  1 19:24:09 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* io.c (rb_io_puts): recurse for the argument itself, not converted
	  array elements.  [ruby-core:42444] [Bug #5986]

Sat Dec  1 19:01:36 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* marshal.c (w_object, r_object0): call private marshal methods.
	  [Feature #6539]

Sat Dec  1 18:52:22 2012  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/commands/cleanup_command.rb:  Fix cleanup command for
	  multiple gems.  [ruby-trunk - #7481] by Kouhei Sutou
	* test/rubygems/test_gem_commands_cleanup_command.rb:  Test for above.
	* lib/rubygems.rb:  Autoload Gem::Source to prevent test failures

Sat Dec  1 18:17:00 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* complex.c (Init_Complex), time.c (Init_Time): make marshal methods
	  private.  [Feature #6539]
